--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -22,8 +22,8 @@
   order: $val
 }
 
-.bg-red {
-  background: #f00;
+.toolbar-hidden {
+  display: none;
 }
 // .wrapper {
 //   @include flexbox();
